Programación/AppJavaFx/ITV_CITAS/src/main/kotlin/com/example/itv_citas/errors/SpecialtyError.kt
package com.example.itv_citas.errors

sealed class SpecialtyError(val message: String) {
    object SpecialtyNotFound: SpecialtyError("ERROR: Specialty not found")
}